bill can be split into drinkers and food only patrons

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,5 +1,10 @@
 <form action="/split_bill" method="POST">
   <input type="text" name="bill_total">
+  <input type="text" name="total_booze">
+  <input type="text" name="boozers">
+  <input type="text" name="total_softdrinks">
+  <input type="text" name="soft_drinkers">
+  <input type="text" name="no_drinkers">
   <input type="text" name="people_count">
   <input type="submit" value="Split bill">
 </form>
